--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Login - Proyecto Web</title>
+  <title>inicio sesion y juego</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -13,17 +13,18 @@
     <input type="password" id="password" placeholder="Contraseña" />
     <button id="loginBtn">Entrar</button>
 
-    <p>¿No tienes cuenta? <a href="#" id="registerLink">Crear nueva</a></p>
+    <p>¿No tienes cuenta? <a href="#" id="registerLink">podes crear nueva</a></p>
   </div>
 
   <div class="register-container hidden">
-    <h2>Registrar nuevo usuario</h2>
+    <h2>Registrar nuevamente usuario</h2>
     <input type="email" id="newEmail" placeholder="Correo electrónico" />
     <input type="password" id="newPassword" placeholder="Contraseña" />
     <button id="registerBtn">Registrar</button>
-    <p><a href="#" id="backToLogin">Volver al login</a></p>
+    <p><a href="#" id="backToLogin">Volver al inicio de sesion</a></p>
   </div>
 
   <script src="script.js"></script>
 </body>
+
 </html>
