--- a/main.html
+++ b/main.html
@@ -11,22 +11,14 @@
         <img src="https://www.freepik.es/vector-premium/fondo-patron-silueta-circulos-colores-sobre-fondo-blanco_23159783.htm" alt="imagen">
     </div>
   <header>
-    <h1>Bienvenido </h1>
+    <h1>buenas noches</h1>
     <button id="logoutBtn">Cerrar sesión</button>
   </header>
 
   <section class="juego">
-    <h2> Juego: Atrapá el círculo</h2>
+    <h2>el juego consiste en atapar el circulo en un determinado campo</h2>
     <div id="gameArea"></div>
-    <p>Puntaje: <span id="score">0</span></p>
-  </section>
-
-  <section class="api-section">
-    <h2>🌦 Información del clima (API)</h2>
-    <p id="apiWeather">Cargando...</p>
-
-<div id="apiFact" class="fact-box">Cargando dato curioso...</div>
-  </section>
+    <p>Puntos hechos por vos: <span id="score">0</span></p>
 
   <section class="fact-card">
   <h2>Dato curioso</h2>
@@ -37,4 +29,5 @@
 
   <script src="script.js"></script>
 </body>
+
 </html>
