--- a/main.html
+++ b/main.html
@@ -10,6 +10,7 @@
     <div class="header-image">
         <img src="https://www.freepik.es/vector-premium/fondo-patron-silueta-circulos-colores-sobre-fondo-blanco_23159783.htm" alt="imagen">
     </div>
+
   <header>
     <h1>buenas noches</h1>
     <button id="logoutBtn">Cerrar sesión</button>
@@ -19,15 +20,16 @@
     <h2>el juego consiste en atapar el circulo en un determinado campo</h2>
     <div id="gameArea"></div>
     <p>Puntos hechos por vos: <span id="score">0</span></p>
+  </section> <!-- Cierre agregado -->
+
 
   <section class="fact-card">
-  <h2>Dato curioso</h2>
-  <div id="apiInfo" class="fact-box">
-    Cargando dato curioso...
-  </div>
-</section>
+    <h2>Dato curioso</h2>
+    <div id="apiInfo" class="fact-box">
+      Cargando dato curioso...
+    </div>
+  </section>
 
   <script src="script.js"></script>
 </body>
-
 </html>
